--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li>Help</li>
                     <li>Login</li>
                 </ul>
-                <img class="logo"  src="img/karma-logo.svg" alt="Logo Image" width="26"/>
+                <img class="logo"  src="img/logo.png" alt="Logo Image" width="26"/>
             </div>
         </nav>
         <section class="introduction">
