--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="top-navigation">
             <div class="content">
                 <ul class="links">
-                    <li class="active">Meet Karma</li>
+                    <li class="active">Meet Rakan</li>
                     <li>How it Works</li>
                     <li>Store</li>
                     <li>Blog</li>
@@ -32,7 +32,7 @@
         </nav>
         <section class="introduction">
             <div class="content">
-                <h1>Introducing Karma</h1>
+                <h1>Introducing to Rakan Website</h1>
                 <h3>Bring WiFi with you, everywhere you go.</h3>
                 <div class="buttons">
                     <button>Learn More</button>
@@ -41,7 +41,7 @@
         </section>
         <section class="cases">
             <div class="content">
-                <h2>Everyone needs a little Karma.</h2>
+                <h2>Everyone needs a website.</h2>
                 <ul class="devices">
                     <li>
                         <img width="127" height="127" src="img/icon-devices.svg" alt="Internet for all devices image">
@@ -82,7 +82,7 @@
                     </li>
                 </ul>
                 <span class="copy">
-                    &copy; Karma Mobility, Inc.
+                    &copy; Rakan Armoush.
                 </span>
             </div>
         </footer>
