--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- All the images you need are in the 'img' folder -->
 
         <nav class="top-navigation">
-            <div class="content">
+            <div class="fixed-header">
                 <ul class="links">
                     <li class="active">Meet Rakan</li>
                     <li>How it Works</li>
